--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
 General Styles
 ****************************** */
 
-/* * {
+* {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-} */
+}
 
 
 .App {
@@ -95,7 +95,6 @@ HomePage Styles
 }
 
 
-
 ul {
   list-style-type: none;
   display: flex;
@@ -123,6 +122,7 @@ InfoPage Styles
 .back-arrow {
   font-size: 22px;
   text-decoration: none;
+  color: #fff;
 }
 
 .icon-infoPage {
@@ -144,10 +144,21 @@ InfoPage Styles
 
 .sup-infoPage {
   font-size: medium;  
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .section2 {
   background: #fff;
   border-radius: 20px 20px 0 0;
+  padding-top: 20px;
+}
+
+.transaction2 {
+  background-color: lightgray;
+  border: 1px solid lightgray;
+  border-radius: 7px;
+  height: 50px;
+  max-width: 235px;
+  margin-top: 5px;
+  opacity: 0.2;
 }
