--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ General Styles
   box-sizing: border-box;
 }
 
-
 .App {
   border: 10px solid black;
   border-radius: 20px;
@@ -64,10 +63,6 @@ h1 {
 /* ******************************
 HomePage Styles
 ****************************** */
-/* .homePage {
-  background-color: white;
-} */
-
 .icon-homePage {
   width: 40px;
   margin-top: -30px;
@@ -112,6 +107,8 @@ InfoPage Styles
 ****************************** */
 .infoPage {
   background-color: #6D66FF;
+  margin-left:-18px;
+
 }
 
 .info-group-icon {
@@ -147,10 +144,16 @@ InfoPage Styles
   font-weight: 500;
 }
 
+.section1 {
+  background-color: #6D66FF;
+  margin: -30px 0 0 -18px;
+  padding: 30px 0 0 35px;
+}
+
 .section2 {
   background: #fff;
   border-radius: 20px 20px 0 0;
-  padding-top: 20px;
+  padding: 20px 0 0 20px;
 }
 
 .transaction2 {
