--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
 General Styles
 ****************************** */
 
+html {
+  overflow: scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -17,8 +25,7 @@ General Styles
   padding-top: 30px;
   padding-left: 17px;
   position: static;
-  overflow: auto;
-  /* background-color: #6D66FF; */
+  overflow: hidden;
 }
 
 /* ******************************
@@ -72,6 +79,8 @@ HomePage Styles
 
 .card-div {
   display: flex;
+  overflow: auto;
+  margin-bottom: -18px;
 }
 
 .span-homePage{
@@ -148,6 +157,22 @@ InfoPage Styles
   background-color: #6D66FF;
   margin: -30px 0 0 -18px;
   padding: 30px 0 0 35px;
+}
+
+.plus {
+  background: black;
+  border-radius: 50%;
+  color: white;
+  float: right;
+  height: 45px;
+  margin: -42px 22px 0 0;
+  width: 45px;
+  text-align: center;
+}
+
+.sign {
+  margin-top: -5px;
+  font-size: 40px;
 }
 
 .section2 {
